--- a/01-百思不得姐/Classes/关注/View/BSFriendsUserCell.xib
+++ b/01-百思不得姐/Classes/关注/View/BSFriendsUserCell.xib
@@ -22,7 +22,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OIt-gz-ixO">
-                        <rect key="frame" x="70" y="20" width="42" height="20.5"/>
+                        <rect key="frame" x="70" y="20" width="204" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -48,7 +48,7 @@
                         </state>
                     </button>
                     <view alpha="0.20000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IeU-Ro-gEo" userLabel="分割线">
-                        <rect key="frame" x="0.0" y="88.5" width="354" height="1"/>
+                        <rect key="frame" x="0.0" y="88" width="354" height="1"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="Sit-Nv-A4D"/>
@@ -59,6 +59,7 @@
                     <constraint firstItem="fwz-nG-F6k" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="12L-1i-b7e"/>
                     <constraint firstItem="IeU-Ro-gEo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="CLK-Gm-2ld"/>
                     <constraint firstItem="fwz-nG-F6k" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="CMn-7w-KRu"/>
+                    <constraint firstItem="7sL-EL-V8l" firstAttribute="leading" secondItem="OIt-gz-ixO" secondAttribute="trailing" constant="10" id="IzC-xW-H7b"/>
                     <constraint firstAttribute="trailing" secondItem="IeU-Ro-gEo" secondAttribute="trailing" id="Ke7-oc-eHh"/>
                     <constraint firstAttribute="bottom" secondItem="IeU-Ro-gEo" secondAttribute="bottom" id="Vee-Bh-m97"/>
                     <constraint firstItem="9mc-B8-4Sw" firstAttribute="bottom" secondItem="fwz-nG-F6k" secondAttribute="bottom" id="ZPN-a3-gmT"/>
