--- a/01-百思不得姐/Classes/精华/View/BSTopicCell.xib
+++ b/01-百思不得姐/Classes/精华/View/BSTopicCell.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="topic" rowHeight="225" id="KGk-i7-Jjw" customClass="BSTopicCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="topic" rowHeight="225" id="KGk-i7-Jjw" customClass="BSTopicCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="225"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -28,7 +28,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F9a-35-QE8" userLabel="时间">
-                        <rect key="frame" x="55" y="30.5" width="31" height="14.5"/>
+                        <rect key="frame" x="55" y="30" width="31" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -88,7 +88,7 @@
                                 <state key="highlighted" image="mainCellCommentClick"/>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cell-button-line" translatesAutoresizingMaskIntoConstraints="NO" id="bbc-gt-cnF">
-                                <rect key="frame" x="80" y="15" width="1" height="29"/>
+                                <rect key="frame" x="80" y="0.0" width="1" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="1" id="zIq-tH-0S2"/>
                                 </constraints>
@@ -118,6 +118,7 @@
                             <constraint firstItem="cBC-Xc-bZF" firstAttribute="leading" secondItem="YaP-SS-Ksr" secondAttribute="trailing" id="AUA-tM-lsR"/>
                             <constraint firstItem="cBC-Xc-bZF" firstAttribute="top" secondItem="WcG-WN-S1k" secondAttribute="top" id="Bev-Nu-kZ1"/>
                             <constraint firstItem="fKO-vM-EJs" firstAttribute="top" secondItem="jSU-bk-J7v" secondAttribute="top" id="CLT-As-b9K"/>
+                            <constraint firstItem="bbc-gt-cnF" firstAttribute="top" secondItem="WcG-WN-S1k" secondAttribute="top" id="Eyi-4f-EYS"/>
                             <constraint firstItem="fKO-vM-EJs" firstAttribute="width" secondItem="jSU-bk-J7v" secondAttribute="width" id="FR8-g8-zmz"/>
                             <constraint firstItem="fKO-vM-EJs" firstAttribute="top" secondItem="jSU-bk-J7v" secondAttribute="top" id="Iby-wq-AZT"/>
                             <constraint firstItem="bYx-2F-gv5" firstAttribute="top" secondItem="jSU-bk-J7v" secondAttribute="top" id="PuA-Vf-SxQ"/>
@@ -143,9 +144,16 @@
                             <constraint firstItem="bYx-2F-gv5" firstAttribute="top" secondItem="jSU-bk-J7v" secondAttribute="top" id="zUA-Xt-2wd"/>
                         </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HUh-rq-Xor">
+                        <rect key="frame" x="10" y="55" width="300" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="WcG-WN-S1k" secondAttribute="trailing" id="1RD-Oz-q7Q"/>
+                    <constraint firstItem="HUh-rq-Xor" firstAttribute="trailing" secondItem="Lkw-KJ-HY0" secondAttribute="trailing" id="4PO-jL-Ec1"/>
                     <constraint firstItem="Lkw-KJ-HY0" firstAttribute="top" secondItem="dfx-13-cEy" secondAttribute="top" id="6dW-Di-fL8"/>
                     <constraint firstItem="91w-Kp-gDh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="F1i-gI-0tv"/>
                     <constraint firstAttribute="trailing" secondItem="Lkw-KJ-HY0" secondAttribute="trailing" constant="10" id="GB3-gD-wdm"/>
@@ -153,8 +161,10 @@
                     <constraint firstAttribute="bottom" secondItem="WcG-WN-S1k" secondAttribute="bottom" id="IAj-08-BBA"/>
                     <constraint firstItem="F9a-35-QE8" firstAttribute="leading" secondItem="dfx-13-cEy" secondAttribute="leading" id="Ko0-HG-gIX"/>
                     <constraint firstItem="WcG-WN-S1k" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="PVf-HM-cyh"/>
+                    <constraint firstItem="HUh-rq-Xor" firstAttribute="leading" secondItem="91w-Kp-gDh" secondAttribute="leading" id="QoM-rS-bVm"/>
                     <constraint firstItem="dfx-13-cEy" firstAttribute="leading" secondItem="91w-Kp-gDh" secondAttribute="trailing" constant="10" id="WjB-Fc-Q3l"/>
                     <constraint firstItem="dfx-13-cEy" firstAttribute="top" secondItem="91w-Kp-gDh" secondAttribute="top" id="Wxn-aj-qtv"/>
+                    <constraint firstItem="HUh-rq-Xor" firstAttribute="top" secondItem="91w-Kp-gDh" secondAttribute="bottom" constant="10" id="yzp-Gs-fFb"/>
                     <constraint firstItem="F9a-35-QE8" firstAttribute="bottom" secondItem="91w-Kp-gDh" secondAttribute="bottom" id="zrV-Re-A1w"/>
                 </constraints>
             </tableViewCellContentView>
@@ -166,6 +176,7 @@
                 <outlet property="nameLabel" destination="dfx-13-cEy" id="ith-81-wET"/>
                 <outlet property="profile_image" destination="91w-Kp-gDh" id="aOu-7Y-j02"/>
                 <outlet property="shareButton" destination="YaP-SS-Ksr" id="lXj-vA-f2G"/>
+                <outlet property="text_Label" destination="HUh-rq-Xor" id="z8F-NM-LuW"/>
             </connections>
             <point key="canvasLocation" x="168" y="445.5"/>
         </tableViewCell>
